--- a/index.html
+++ b/index.html
@@ -605,11 +605,16 @@
   }
   @media only screen and (max-width: 798px) {
   .rates-section {
-    width: 70%;
+    width: 95%;
   }
 }
   .rates-section h2 {
  color: #ffffff;
+ margin-left: 25px;
+  }
+
+  .slb{
+    padding-left: 30px;
   }
 
 
@@ -725,10 +730,39 @@
       padding: 10px;
     }
   }
+  #mobile-message button {
+  transition: all 0.3s ease;
+}
+
+#mobile-message button:hover {
+  background: #1a5f95 !important;
+  transform: scale(1.05);
+}
+
+@media (max-width: 480px) {
+  #mobile-message div {
+    max-width: 90% !important;
+    padding: 15px !important;
+  }
+}
+ 
 </style>
 
 <body>
-   
+    
+  <div id="mobile-message" style="display: none;">
+  <div style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #2173b7; z-index: 9999; display: flex; justify-content: center; align-items: center;">
+    <div style="background: white; padding: 20px; border-radius: 10px; max-width: 80%; text-align: center;">
+      <h2 style="color: #2173b7;">Some features may not work properly on mobile devices.</h2>
+      <p>Designed for tablets and desktops.</p>
+      <button onclick="document.getElementById('mobile-message').style.display = 'none'" 
+              style="background: #2173b7; color: white; border: none; padding: 10px 20px; border-radius: 5px; margin-top: 15px; cursor: pointer;">
+        Continue Anyway
+      </button>
+    </div>
+  </div>
+</div>
+
 <div id="splash-screen">
   <video id="splash-video" autoplay muted playsinline>
     <source src="splash.mp4" type="video/mp4">
@@ -926,8 +960,8 @@
              <div class="slb ">
                 <div class="slbb">
                     <h2>Instagram AR Effects</h2>
-                    <h5>This is my first blogspot Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et quaerat explicabo deserunt quas tempora labore aut facere nobis, soluta libero illo fugiat vitae quos aliquam minima fugit quisquam hic. Minima!</h5>
-                    <h5>3D model sclupting through Blender
+                   <h5>Augmented Reality filters designed for Instagram using Spark AR. Includes face tracking, 3D object placement, and animated visual effects.</h5>
+                  <h5>Tools: Spark AR Studio, Blender (for 3D modeling)
                          <br>
                  Project Year: 2023
                     </h5>
@@ -1361,6 +1395,19 @@ document.addEventListener('DOMContentLoaded', function() {
       document.body.style.overflow = '';
     });
   });
+</script>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  // Check if mobile device
+  const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+  
+  // Alternative method using screen width (choose one)
+  // const isMobile = window.innerWidth <= 768;
+  
+  if (isMobile) {
+    document.getElementById('mobile-message').style.display = 'block';
+  }
+});
 </script>
     
 </body>
