--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hi, I'm Aviral Paudel – a passionate web developer who builds clean, user-friendly websites and delivers quality digital solutions.">
     <title>Aviral Paudel</title>
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
   <link rel="shortcut icon" href="favicon-32x32.png" type="image/png">
