--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hi, I'm Aviral Paudel – a passionate web developer who builds clean, user-friendly websites and delivers quality digital solutions.">
     <title>Aviral Paudel</title>
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
-  <link rel="shortcut icon" href="favicon-32x32.png" type="image/png">
+  <link rel="icon" href="/favicon-32x32.png" type="image/png" sizes="32x32">
+<link rel="shortcut icon" href="/favicon-32x32.png" type="image/png">
+<link rel="apple-touch-icon" href="/favicon-32x32.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
