--- a/index.html
+++ b/index.html
@@ -766,11 +766,11 @@
 </div>
 
 <div id="splash-screen">
-  <video id="splash-video" autoplay muted playsinline>
-    <source src="splash.mp4" type="video/mp4">
-    <!-- Fallback if video doesn't load -->
-    <img src="splash-fallback.jpg" alt="Welcome" style="width:100%;height:100%;object-fit:cover;">
-  </video>
+  <video id="splash-video" autoplay muted playsinline preload="auto">
+  <source src="splash.mp4" type="video/mp4">
+  <img src="splash-fallback.jpg" alt="Welcome" style="width:100%;height:100%;object-fit:cover;">
+</video>
+
 </div>
      <div class="frst">
         <model-viewer id="ddd"
