--- a/index.html
+++ b/index.html
@@ -755,8 +755,8 @@
   <div id="mobile-message" style="display: none;">
   <div style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #2173b7; z-index: 9999; display: flex; justify-content: center; align-items: center;">
     <div style="background: white; padding: 20px; border-radius: 10px; max-width: 80%; text-align: center;">
-      <h2 style="color: #2173b7;">Some features may not work properly on mobile devices.</h2>
-      <p>Designed for tablets and desktops.</p>
+      <h2 style="color: #2173b7;">Why did you open me on a mobile? 😞</h2>
+      <p>If some features don’t work properly, don’t shout at me 😐"</p>
       <button onclick="document.getElementById('mobile-message').style.display = 'none'" 
               style="background: #2173b7; color: white; border: none; padding: 10px 20px; border-radius: 5px; margin-top: 15px; cursor: pointer;">
         Continue Anyway
